--- a/scss/globals/_components.scss
+++ b/scss/globals/_components.scss
@@ -7,7 +7,7 @@ body {
 }
 
 section {
-    margin: 223px auto 100px;
+    margin: 5% auto 100px;
     padding: 37px 47px 0;
     max-width: 446px;
     border-radius: 15px;
