--- a/scss/globals/_breakpoints.scss
+++ b/scss/globals/_breakpoints.scss
@@ -1,6 +1,6 @@
-@media (max-width: 844px) {
+@media (max-width: 500px) {
     section {
-        margin: 120px auto 100px;
+        margin: 25% auto 100px;
         padding: 31px 21px 0;
         border-radius: 9px;
     }
